<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LocalGuide</string>
    <string name="description"><b>LocalGuide</b> provides an easy way to search for anything around you.Gives you detailed result of address,phone numbers.The search categories can be <i>(eg. pubs,theatres, hospital, citibank, schools)</i> </string>
	<string name="description1">\n\tIf the city or country is not entered, your current location will be automitcally picked up either through GPS or with your Wifi info.Once the desired result is chosen ,it gives you an option to</string>
	<string name="description2">Swipe left or swipe right on the detailed address view will show the previous or next result.\n</string>
	<string name="auth">Please authenticate your twitter and facebook accounts</string>
	<string name="location_detail">\tLocation is obtained using two ways <b>GPS </b> and <b> Wifi or CELL-ID</b>. Although GPS works only in outdoors it is accurate.But it is time consuming and eats up <i>battery power</i>.Network Location Provider uses cell tower and Wifi signals to identify location and it is faster than GPS.\n\n\tSo it is recommended to turn ON both the location providers under <b>Settings->Location  Security->My Location</b>.\n\n</string>
	<string name="route_error">Couldn\'t find the routes to this destination</string>
	<string name="find_location">Finding the location</string>
	<string name="call">Call</string>
	<string name="message">Send a SMS/message</string>
	<string name="phonebook">Save to Phonebook</string>
	<string name="direction">Get directions</string>
	<string name="twitter">Tweet the location</string>
	<string name="facebook">Post to your wall</string>
	<string name="fav_description">Save as favorites</string>
	<string name="sign_in">Sign-In</string>
	<string name="different_user">Try different user</string>
	<string name="enter_category">Enter a category :</string>
	<string name="select_category">Select category</string>
	<string name="choose_category">Choose categories</string>
	<string name="enter_location">Enter a location :</string>
	<string name="current_location">Current location</string>
	<string name="no_favorite">No favorites</string>
	<string name="help">Help</string>
	<string name="localguide">Localguide</string>
	<string name="favorite">Favorites</string>
	<string name="pubs">Pubs</string>
	<string name="restuarant">Restaurant</string>
	<string name="police">Police</string>
	<string name="gas">Gas</string>
	<string name="shopping">Shopping</string>
	<string name="taxi">Taxi</string>
	<string name="hospital">Hospital</string>
	<string name="train">Train</string>
	<string name="theatre">Theatre</string>
	<string name="searching">Searching</string>
	<string name="no_results">No results found for the search category.</string>
	<string name="no_location">Sorry,couldn\'t find the location</string>
	<string name="no_location_gps">Sorry, Couldn\'t fetch the current location, due to unavailability of network or GPS provider.If using only GPS provider please consider finding the location in an open space.</string>
	<string name="no_location_gps_4x1">Sorry, Couldn\'t fetch the current location, due to unavailability of network or GPS provider </string>
	<string name="reverse_geocoding_error">Sorry, Couldn\'t fetch the current location, due to reverse geocoding error</string>
	<string name="no_internet">No Internet Connection</string>
	<string name="enable_internet">Please enable the internet connection</string>
	<string name="no_category">Category not entered</string>
	<string name="pls_enter_category">Please enter a category</string>
	<string name="no_location_entered">Location not entered</string>
	<string name="pls_enter_location">Please enter a valid location</string>
	<string name="more">More</string>
	<string name="fav_already_present">Already present in favorites list</string>
	<string name="fav_added">Succesfully added to favorites</string>
	<string name="not_authenticated">Not authenticated</string>
	<string name="twitter_auth_pls">Please go to help page and authenticate with your twitter account</string>
	<string name="facebook_auth_pls">Please go to help page and authenticate with your facebook account</string>
	<string name="twitter_success">Post to Twitter success</string>
	<string name="facebook_success">Successfully posted to your wall</string>
	<string name="facebook_failure">Post to Facebook failure</string>
	<string name="create_contact">Created a new contact: %1$s</string>
	<string name="result">Results</string>
	<string name="maps">Maps</string>
	<string name="directions">Directions</string>
	<string name="no_route">No Route available to this destination</string>
	<string name="distance">Distance</string>
	<string name="instruction">Instruction</string>
	<string name="find_route">Finding the routes</string>
	<string name="load_direction">Loading the directions</string>
	<string name="network_issues">Network problem. Please try again.</string>
	<string name="location"><b>Location: </b></string>
	<string name="no_location_again">Sorry,couldn\'t find the location.Please try again.</string>
	<string name="try_again">Try again</string>
	<string name="movement">Movement\n Detection</string>
	<string name="movement_detection">Movement Detection</string>
	<string name="success_favorites">Successfully delted from favorites list</string>
	<string name="fail_delete_favorites">Failed to delete favorites</string>
	<string name="loading_results">Loading the results.......\n please wait</string>
	
</resources>
