<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/MainLayout"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent"
		      android:padding="5px"
              android:background="@color/app_background_color"
              android:orientation="vertical">

            
	<TextView android:id="@+id/category"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textAppearance="?android:attr/textAppearanceLarge"
	android:textColor="#ffffffff"
	android:padding="3dip"
	android:text="@string/enter_category" />

	<LinearLayout 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="3dip"
				android:orientation="horizontal">
				
			<EditText android:id="@+id/categotytextbox"
			android:hint="eg. pubs,restuarants "
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="0.2"
			android:paddingLeft="3px"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="#12105E"
			android:textColorHint="#AA12105E"
			android:background="@color/edittext_bkg"
			android:singleLine="true"
			android:layout_marginLeft="5dip"
			android:maxLines="1"/>
			
			<ImageView android:id="@+id/search"
			android:layout_marginLeft="10dip"
			android:layout_weight="0.8"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:src="@drawable/find"/>
	
	</LinearLayout>

	<Button android:id="@+id/categories"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="right"
	android:layout_marginTop="10dip"
	android:layout_marginRight="10dip"
	android:padding="5px"
	android:text="@string/choose_category"
	android:textSize="18sp"
	android:background="@drawable/search_button"
	android:textColor="#ffffff"/>
	            
	<TextView android:id="@+id/location"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:visibility="gone"
	android:textColor="#ffffffff"
	android:textAppearance="?android:attr/textAppearanceLarge"
	android:padding="3dip"
	android:text="@string/enter_location" />
				
	<EditText android:id="@+id/locationtextbox"
	android:hint="eg. Liverpool,uk "
	android:layout_width="250dip"
	android:layout_height="wrap_content"
	android:textColor="#12105E"
	android:textColorHint="#AA12105E"
	android:textAppearance="?android:attr/textAppearanceLarge"
	android:layout_marginLeft="5dip"
	android:paddingLeft="3px"
	android:background="@color/edittext_bkg"
	android:visibility="gone"
	android:singleLine="true"
	android:maxLines="1"/>
	 
	<CheckBox android:id="@+id/checkbox"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:textAppearance="?android:attr/textAppearanceLarge"
	android:layout_marginLeft="3dip"
	android:checked="true"
	android:text="@string/current_location"/>
      
</LinearLayout>
