<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
  android:orientation="vertical"
  android:background="@color/app_background_color"
  android:layout_width="fill_parent" 
  android:layout_height="fill_parent">
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true">
            
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/MainLayout"
			android:paddingLeft="2px"
			android:paddingTop="2px"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent"
              android:orientation="vertical">
              
 <TextView android:id="@+id/description"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:paddingLeft="5px"
  android:paddingTop="5px"
  android:textAppearance="?android:attr/textAppearanceLarge"
  android:textColor="#ffffff"
  android:text="@string/description"/>

<TextView android:id="@+id/description1"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:paddingLeft="5px"
  android:textAppearance="?android:attr/textAppearanceLarge"
  android:textColor="#ffffff"
  android:text="@string/description1"/> 
 
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myTableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    <TableRow
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:padding="3px">
      
				<ImageView android:id="@+id/previous"
				android:layout_width="30dip" 
				android:layout_height="30dip" 
				android:layout_weight="0.2"
				android:layout_gravity="center_vertical"
				android:src="@drawable/telephone"/>
				
				<TextView android:id="@+id/call"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="0.8"
				android:textColor="#ffffff"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_gravity="center_vertical"
				android:text="@string/call"/>
     </TableRow>
     
         
    <TableRow
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:padding="3px">
      
				<ImageView android:id="@+id/previous"
				android:layout_width="30dip" 
				android:layout_height="30dip" 
				android:layout_weight="0.2"
				android:layout_gravity="center_vertical"
				android:src="@drawable/phonebook"/>
				
				<TextView android:id="@+id/phonebook"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="0.8"
				android:textColor="#ffffff"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_gravity="center_vertical"
				android:text="@string/phonebook"/>

     </TableRow>
     
         
    <TableRow
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:padding="3px">
      
				<ImageView android:id="@+id/previous"
				android:layout_width="30dip" 
				android:layout_height="30dip" 
				android:layout_weight="0.2"
				android:layout_gravity="center_vertical"
				android:src="@drawable/mail"/>
				
				<TextView android:id="@+id/message"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="0.8"
				android:textColor="#ffffff"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_gravity="center_vertical"
				android:text="@string/message"/>

     </TableRow>
     
         
    <TableRow
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:padding="3px">
      
				<ImageView android:id="@+id/previous"
				android:layout_width="30dip" 
				android:layout_height="30dip" 
				android:layout_weight="0.2"
				android:layout_gravity="center_vertical"
				android:src="@drawable/globe"/>
				
				<TextView android:id="@+id/direction"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="0.8"
				android:textColor="#ffffff"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_gravity="center_vertical"
				android:text="@string/direction"/>
>
     </TableRow>
     
         
    <TableRow
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:padding="3px">
      
				<ImageView android:id="@+id/previous"
				android:layout_width="30dip" 
				android:layout_height="30dip" 
				android:layout_weight="0.2"
				android:layout_gravity="center_vertical"
				android:src="@drawable/twitter_icon"/>
				
				<TextView android:id="@+id/twitter_options"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="0.8"
				android:textColor="#ffffff"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_gravity="center_vertical"
				android:text="@string/twitter"/>

     </TableRow>
     
         
    <TableRow
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:padding="3px">
      
				<ImageView android:id="@+id/previous"
				android:layout_width="30dip" 
				android:layout_height="30dip" 
				android:layout_weight="0.2"
				android:layout_gravity="center_vertical"
				android:src="@drawable/facebook"/>
				
				<TextView android:id="@+id/facebook_options"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="0.8"
				android:textColor="#ffffff"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_gravity="center_vertical"
				android:text="@string/facebook"/>

     </TableRow>
     
         
    <TableRow
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="3px"
      android:paddingRight="3px"
      android:paddingBottom="10px"
      android:paddingTop="3px">
      
				<ImageView android:id="@+id/previous"
				android:layout_width="30dip" 
				android:layout_height="30dip" 
				android:layout_weight="0.2"
				android:layout_gravity="center_vertical"
				android:src="@drawable/favorite"/>
				
				<TextView android:id="@+id/favorites"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="0.8"
				android:textColor="#ffffff"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_gravity="center_vertical"
				android:text="@string/fav_description"/>
     </TableRow>
     
<TextView android:id="@+id/description2"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:paddingLeft="5px"
  android:textAppearance="?android:attr/textAppearanceLarge"
  android:textColor="#ffffff"
  android:text="@string/description2"/> 
 
</TableLayout>

<View
android:layout_width="fill_parent"
 android:layout_height="3px"
 android:paddingTop="10px"
 android:background="#FFFFFFFF" />
 
 <TextView 
 android:id="@+id/authentication"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:textAppearance="?android:attr/textAppearanceLarge"
  android:textStyle="bold"
  android:paddingLeft="2px"
  android:paddingTop="10px"
  android:text="Authentication"/>
 
 <TextView 
 android:id="@+id/authenticationtext"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:paddingLeft="5px"
  android:textAppearance="?android:attr/textAppearanceLarge"
  android:text="@string/auth"/>
   
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myTableLayout1"
    android:layout_width="fill_parent"
    android:padding="3px"
    android:layout_height="wrap_content">
    
    <TableRow
      android:layout_width="fill_parent"
      android:padding="5px"
      android:layout_height="wrap_content">
      
 <TextView android:id="@+id/twittertext"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_weight="0.4"
  android:textStyle="bold"
  android:textAppearance="?android:attr/textAppearanceMedium"
  android:text="Twitter"/>
				
<Button android:id="@+id/twitter"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:layout_weight="0.6"
 android:paddingLeft="8px"
 android:paddingRight="5px"
 android:paddingTop="5px"
 android:paddingBottom="5px"
 android:background="@drawable/search_button"
 android:textAppearance="?android:attr/textAppearanceMedium"
 android:drawableLeft="@drawable/twitter_icon"
 android:textColor="#ffffff"
 android:text="Sign In"/> 
 </TableRow>  

     <TableRow
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:padding="5px">
      
 <TextView android:id="@+id/facebooktext"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_weight="0.4"
  android:textStyle="bold"
  android:textAppearance="?android:attr/textAppearanceMedium"
  android:text="Facebook"/>
				
			<Button android:id="@+id/facebook"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content" 
			 android:layout_weight="0.6"
			 android:paddingLeft="8px"
			 android:paddingRight="5px"
			 android:paddingTop="5px"
			 android:paddingBottom="5px"
 			 android:textColor="#ffffff"
			 android:drawableLeft="@drawable/facebook"
			 android:textAppearance="?android:attr/textAppearanceMedium"
			 android:background="@drawable/search_button"
			 android:text="Sign In"/> 
     </TableRow>  
     
     </TableLayout>
 
 <View
android:layout_width="fill_parent"
 android:layout_height="3px"
 android:paddingTop="10px"
 android:background="#FFFFFFFF" />
 
 <TextView 
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:textAppearance="?android:attr/textAppearanceLarge"
  android:textStyle="bold"
  android:paddingLeft="2px"
  android:paddingTop="10px"
  android:id="@+id/identify_location"
  android:text="Identifying Location"/>
 
  <TextView 
  android:id="@+id/location_detail"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:paddingLeft="5px"
  android:textAppearance="?android:attr/textAppearanceLarge"
  android:text="@string/location_detail"/>
  
 </LinearLayout>

 
</ScrollView>
<com.google.ads.AdView android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:gravity="bottom"
                         android:layout_gravity="bottom"
                         ads:adUnitId="a14ec4712fbe1de"
                         ads:adSize="BANNER"
                         ads:loadAdOnCreate="true"/>
  
</RelativeLayout>
